Added OpenAI API as chatgpt wrapper to feed off page database, Created and added virtual assistant for the page

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ GOOGLE_CLIENT_SECRET=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
 GOOGLE_REFRESH_TOKEN=1//04SoE61vI76hgCgYIARAAGAQSNwF-L9IrUzQU3mxT-Tpql7Qtw_umqmL65Z8ef-L0Yzqa0px3d5_mYnZmagaK6hVzZTswc4UlqDI
 GOOGLE_CALENDAR_ID=nivirtualagents@gmail.com
 NEXTAUTH_URL=http://localhost:3000
+OPENAI_API_KEY=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
