--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "googleapis": "^105.0.0",
     "luxon": "^3.7.1",
     "next": "13.5.6",
+    "nodemailer": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1"
